@@ -19,6 +19,8 @@ update-manager (1:0.125.1) UNRELEASEDkarmic; urgency=low
   * UpdateManager/GtkProgress.py:
     - make button_cancel click event work
     - add sensible default width
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix crash in partial upgrade (LP: #428203)
 
  -- Josh Holland <jrh@joshh.co.uk>  Sun, 06 Sep 2009 11:34:11 +0100
 
